Incluir estrutura Kafka

--- a/src/Bacen/appsettings.json
+++ b/src/Bacen/appsettings.json
@@ -9,5 +9,10 @@
     "Mongo": {
         "ConnectionString": "mongodb://rootuser:rootpassword@localhost:27017",
         "DatabaseName": "bacen"
+    },
+    "Kafka": {
+        "BootstrapServers": "localhost:9092",
+        "GroupId": "bacen.entries.group",
+        "AutoOffsetReset": "earliest"
     }
 }
