--- a/src/Bacen/appsettings.Docker.json
+++ b/src/Bacen/appsettings.Docker.json
@@ -7,11 +7,11 @@
     },
     "AllowedHosts": "*",
     "Mongo": {
-        "ConnectionString": "mongodb://rootuser:rootpassword@localhost:27017",
+        "ConnectionString": "mongodb://rootuser:rootpassword@mongo:27017",
         "DatabaseName": "bacen"
     },
     "Kafka": {
-        "BootstrapServers": "kafka:9092",
+        "BootstrapServers": "Kafka:29092",
         "GroupId": "bacen.entries.group",
         "AutoOffsetReset": "earliest"
     }
