--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+PROJECT_NAMESPACE=leandroalves86
 PROJECT_NAME=pdi-2023-q3q4
 MONGO_INITDB_ROOT_USERNAME=rootuser
 MONGO_INITDB_ROOT_PASSWORD=rootpassword
+ASPNET_ENV=Docker
