Add Vulture Api

--- a/src/Vulture/appsettings.json
+++ b/src/Vulture/appsettings.json
@@ -8,17 +8,20 @@
     "AllowedHosts": "*",
     "Mongo": {
         "ConnectionString": "mongodb://rootuser:rootpassword@localhost:27017",
-        "DatabaseName": "bacen"
+        "DatabaseName": "vulture"
     },
     "Kafka": {
         "Configuration": {
             "BootstrapServers": "localhost:9092",
-            "GroupId": "bacen.entries.group",
+            "GroupId": "vulture.entries.group",
             "AutoOffsetReset": "earliest"
         },
         "Topics": {
-            "Entries": "bacen.entries",
-            "Claims": "bacen.claims"
+            "Entries": "vulture.entries",
+            "Claims": "vulture.claims"
         }
+    },
+    "Bacen":{
+        "Url": "http://localhost:5293"
     }
 }
