--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -111,6 +111,12 @@ services:
       echo -e 'Creating kafka topics'
       kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic bacen.entries --replication-factor 1 --partitions 1
       kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic bacen.claims --replication-factor 1 --partitions 1
+      
+      kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic vulture.entries --replication-factor 1 --partitions 1
+      kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic vulture.claims --replication-factor 1 --partitions 1
+      
+      kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic star.entries --replication-factor 1 --partitions 1
+      kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic star.claims --replication-factor 1 --partitions 1
 
       echo -e 'Successfully created the following topics:'
       kafka-topics --bootstrap-server kafka:29092 --list
