--- a/src/Bacen/appsettings.Docker.json
+++ b/src/Bacen/appsettings.Docker.json
@@ -13,7 +13,7 @@
     "Kafka": {
         "Configuration": {
             "BootstrapServers": "kafka:29092",
-            "GroupId": "bacen.entries.group",
+            "GroupId": "bacen.group",
             "AutoOffsetReset": "earliest"
         },
         "Topics": {
