--- a/src/Vulture/appsettings.json
+++ b/src/Vulture/appsettings.json
@@ -13,7 +13,7 @@
     "Kafka": {
         "Configuration": {
             "BootstrapServers": "localhost:9092",
-            "GroupId": "vulture.entries.group",
+            "GroupId": "vulture.group",
             "AutoOffsetReset": "earliest"
         },
         "Topics": {
