--- a/src/Star/Star.Claims/appsettings.Docker.json
+++ b/src/Star/Star.Claims/appsettings.Docker.json
@@ -7,12 +7,12 @@
     },
     "AllowedHosts": "*",
     "Mongo": {
-        "ConnectionString": "mongodb://rootuser:rootpassword@localhost:27017",
+        "ConnectionString": "mongodb://rootuser:rootpassword@mongo:27017",
         "DatabaseName": "star"
     },
     "Kafka": {
         "Configuration": {
-            "BootstrapServers": "localhost:9092",
+            "BootstrapServers": "kafka:29092",
             "GroupId": "star.group",
             "AutoOffsetReset": "earliest"
         },
@@ -21,6 +21,6 @@
         }
     },
     "Bacen":{
-        "Url": "http://localhost:5293"
+        "Url": "http://bacen"
     }
 }
