--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,12 @@ networks:
   pdi.infra:
     driver: bridge
 
+volumes:
+  zookeeper-data:
+    driver: local
+  zookeeper-log:
+    driver: local
+
 services:
   bacen:
     image: ${PROJECT_NAMESPACE}.bc
@@ -121,6 +127,34 @@ services:
       timeout: 5s
       retries: 5
       start_period: 10s
+  
+  star-claims:
+    image: ${PROJECT_NAMESPACE}.star.claims
+    container_name: ${PROJECT_NAME}.star.claims
+    build:
+      context: ./src/
+      dockerfile: Star/Star.Claims/Dockerfile
+    depends_on:
+      mongo:
+        condition: service_healthy        
+      kafka:
+        condition: service_healthy
+    ports:
+      - 6406:80
+    environment:
+      - ASPNETCORE_ENVIRONMENT=${ASPNET_ENV}
+      - Kafka__Configuration__BootstrapServers=${KAFKA_BOOTSTRAP}
+    networks:
+      - pdi.star
+      - pdi.bacen
+    cpus: 0.25
+    mem_limit: 256M
+    healthcheck:
+      test: curl --insecure --fail --location 'http://localhost/hc' || exit 1
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   mongo:
     image: mongo
@@ -162,7 +196,7 @@ services:
 
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
-    container_name: ${PROJECT_NAME}.zookeeper
+    # container_name: ${PROJECT_NAME}.zookeeper    
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
@@ -170,12 +204,16 @@ services:
       - pdi.infra
     cpus: 0.5
     mem_limit: 512M
+    scale: 2
     healthcheck:
       test: nc -z localhost 2181 || exit -1
       interval: 10s
       timeout: 5s
       retries: 5
       start_period: 10s
+    volumes:
+      - zookeeper-data:/var/lib/zookeeper
+      - zookeeper-log:/var/log/zookeeper
 
   kafka:
     image: confluentinc/cp-kafka:latest
@@ -201,11 +239,13 @@ services:
     cpus: 0.5   
     mem_limit: 512M
     healthcheck:
-      test: ["CMD-SHELL", "kafka-topics --bootstrap-server localhost:9092 --list"]
+      test: ["CMD-SHELL", "/scripts/hc-kafka.sh"]
       interval: 15s
-      timeout: 10s
+      timeout: 30s
       retries: 5
       start_period: 30s
+    volumes:
+      - ./scripts/hc-kafka.sh:/scripts/hc-kafka.sh
 
   kafka-ui:
     image: provectuslabs/kafka-ui:latest
@@ -228,8 +268,7 @@ services:
     image: confluentinc/cp-zookeeper:latest
     container_name: ${PROJECT_NAME}.init-kafka
     depends_on:
-      kafka:
-        condition: service_healthy
+      - kafka
     entrypoint: [ '/bin/sh', '-c' ]
     networks:
       - pdi.infra
@@ -238,7 +277,6 @@ services:
     command: |
       "
       # blocks until kafka is reachable
-      kafka-topics --bootstrap-server kafka:29092 --list
 
       echo -e 'Creating kafka topics'
       kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic bacen.entries --replication-factor 1 --partitions 1
