--- a/k8s/star.claims.values.yaml
+++ b/k8s/star.claims.values.yaml
@@ -1,5 +1,5 @@
 replicaCount: 1
-image: leandroalves86.bc
+image: leandroalves86.star.claims
 
 service:
   type: LoadBalancer
@@ -22,11 +22,11 @@ mongodb:
   password: root123Mudar
   service: mongo-mongodb.default.svc.cluster.local
   port: 27017
-  databasename: bacen
+  databasename: star.claims
 
 kafka:
   bootstrapServers: kafka.default.svc.cluster.local:9092
 
 bacen:
-  enabled: false
-  url: ""
+  enabled: true
+  url: "http://bacen-api-bank-service.default.svc.cluster.local"
