--- a/k8s/star.entries.values.yaml
+++ b/k8s/star.entries.values.yaml
@@ -1,8 +1,8 @@
 replicaCount: 1
-image: leandroalves86.star.entries
+image: leandroalves86/star.entries
 
 service:
-  type: LoadBalancer
+  type: ClusterIP
   port: 80
 
 pod:
