--- a/k8s/star.accounts.values.yaml
+++ b/k8s/star.accounts.values.yaml
@@ -30,3 +30,6 @@ kafka:
 bacen:
   enabled: true
   url: "http://bacen-api-bank-service.default.svc.cluster.local"
+
+ingress:
+  host: star.accounts.leandroalves.dev.br
