--- a/k8s/star.claims.values.yaml
+++ b/k8s/star.claims.values.yaml
@@ -6,6 +6,11 @@ service:
   port: 80
 
 pod:
+  initContainer:
+    enabled: true
+    topics:
+      - topic:
+          name: "star.claims"
   port: 80
   liveness: 
     enabled: true 
