--- a/src/Bacen/appsettings.json
+++ b/src/Bacen/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "Mongo": {
-        "ConnectionString": "mongodb://rootuser:rootpassword@localhost:27017",
+        "ConnectionString": "mongodb://root:root123Mudar@localhost:27017",
         "DatabaseName": "bacen"
     },
     "Kafka": {
