--- a/k8s/kafka/ui/values.yaml
+++ b/k8s/kafka/ui/values.yaml
@@ -3,12 +3,12 @@
 service:
   type: ClusterIP
   port: 80
-  # loadBalancerIP: 172.28.255.210
+
 yamlApplicationConfig:
   kafka:
     clusters:
       - name: k8s
-        bootstrapServers: kafka.default.svc.cluster.local:9092
+        bootstrapServers: kafka-service:9092
 ingress:
   enabled: true
   host: kafka-ui.leandroalves.dev.br
