--- a/k8s/kafka/values.yaml
+++ b/k8s/kafka/values.yaml
@@ -1,30 +1,97 @@
-# helm install kafka bitnami/kafka -f kafka.values.yaml
-# helm upgrade kafka bitnami/kafka -f kafka.values.yaml
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: kafka
+spec:
+  selector:
+    matchLabels:
+      app: kafka
+  template:
+    metadata:
+      labels:
+        app: kafka
+    spec:
+      containers:
+        - name: kafka
+          image: confluentinc/cp-kafka:latest
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 2181
+              name: zookeeper
+            - containerPort: 9092
+              name: kafka
+            - containerPort: 9093
+              name: kafka-host
+          env:
+            - name: "KAFKA_BROKER_ID"
+              value: "1"
+            - name: "KAFKA_ZOOKEEPER_CONNECT"
+              value: "zookeeper-service:2181"
+            - name: "KAFKA_ADVERTISED_LISTENERS"
+              value: "PLAINTEXT://kafka-service:9092,PLAINTEXT_HOST://localhost:9093"
+            - name: "KAFKA_LISTENER_SECURITY_PROTOCOL_MAP"
+              value: "PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT"
+            - name: "KAFKA_INTER_BROKER_LISTENER_NAME"
+              value: "PLAINTEXT"
+            - name: "KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR"
+              value: "1"
 
-controller:
-  replicaCount: 1
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: kafka-service
+spec:
+  selector:
+    app: kafka
+  ports:
+    - port: 9092
+      targetPort: 9092
 
-externalAccess:
-  enabled: false
-  autoDiscovery:
-    enabled: true
-  auth:
-    enabled: false
-rbac:
-  create: true
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: zookeeper
+spec:
+  selector:
+    matchLabels:
+      app: zookeeper
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: zookeeper
+    spec:
+      containers:
+        - name: zookeeper
+          image: confluentinc/cp-zookeeper:latest
+          resources:
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
+          ports:
+            - containerPort: 2181
+              name: clientport
+              protocol: TCP
+          env:
+            - name: "ZOOKEEPER_CLIENT_PORT"
+              value: "2181"
+            - name: "ZOOKEEPER_TICK_TIME"
+              value: "2000"
 
-listeners:
-  client:
-    protocol: PLAINTEXT
-    client:
-      users: []
-  controller:
-    protocol: PLAINTEXT
-  interbroker:
-    protocol: PLAINTEXT
-  external:
-    protocol: PLAINTEXT
-sasl:
-  enabledMechanisms: PLAIN
-
-
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: zookeeper-service
+spec:
+  selector:
+    app: zookeeper
+  ports:
+    - port: 2181
+      targetPort: 2181
+      protocol: TCP
