--- a/k8s/star.claims.values.yaml
+++ b/k8s/star.claims.values.yaml
@@ -11,6 +11,8 @@ pod:
     topics:
       - topic:
           name: "star.claims"
+          partitions: 1
+          replicationFactor: 1
   port: 80
   liveness: 
     enabled: true 
@@ -30,7 +32,7 @@ mongodb:
   databasename: star.claims
 
 kafka:
-  bootstrapServers: kafka.default.svc.cluster.local:9092
+  bootstrapServers: kafka-headless.default:9092
 
 bacen:
   enabled: true
