--- a/k8s/vulture.values.yaml
+++ b/k8s/vulture.values.yaml
@@ -11,8 +11,12 @@ pod:
     topics:
       - topic:
           name: "vulture.entries"
+          partitions: 1
+          replicationFactor: 1
       - topic:
           name: "vulture.claims"
+          partitions: 1
+          replicationFactor: 1
   port: 80
   liveness: 
     enabled: true 
@@ -32,7 +36,7 @@ mongodb:
   databasename: vulture
 
 kafka:
-  bootstrapServers: kafka.default.svc.cluster.local:9092
+  bootstrapServers: kafka-headless.default:9092
 
 bacen:
   enabled: true
