[Helm] Add ajustes nos values das apis

--- a/k8s/star.claims.values.yaml
+++ b/k8s/star.claims.values.yaml
@@ -32,7 +32,7 @@ mongodb:
   databasename: star.claims
 
 kafka:
-  bootstrapServers: kafka-api-bank-service:9092
+  bootstrapServers: kafka-api-bank-service.default.svc.cluster.local:9092
 
 bacen:
   enabled: true
