--- a/k8s/vulture.values.yaml
+++ b/k8s/vulture.values.yaml
@@ -36,7 +36,7 @@ mongodb:
   databasename: vulture
 
 kafka:
-  bootstrapServers: kafka-headless.default:9092
+  bootstrapServers: kafka-api-bank-service.default.svc.cluster.local:9092
 
 bacen:
   enabled: true
