[c#] add melhorias nos servicos de portabilidade

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,8 +36,8 @@ services:
         condition: service_healthy
       vulture:
         condition: service_healthy
-      # star-accounts:
-      #   condition: service_healthy
+      star-accounts:
+        condition: service_healthy
       star-entries:
         condition: service_healthy
       star-claims:
