--- a/src/Star/Star.Claims/appsettings.json
+++ b/src/Star/Star.Claims/appsettings.json
@@ -20,7 +20,11 @@
             "Claims": "star.claims"
         }
     },
-    "Bacen":{
+    "Bacen": {
         "Url": "http://localhost:5293"
+    },
+    "Worker": {
+        "IntervalInSeconds": 2,
+        "Ispb": 13140077
     }
 }
