--- a/src/Vulture/appsettings.json
+++ b/src/Vulture/appsettings.json
@@ -23,5 +23,9 @@
     },
     "Bacen":{
         "Url": "http://localhost:5293"
+    },
+    "Worker": {
+        "IntervalInSeconds": 2,
+        "Ispb": 13140099
     }
 }
