--- a/k8s/mongo/values.yaml
+++ b/k8s/mongo/values.yaml
@@ -1,33 +1,25 @@
-# bitnami/mongodb
-# mongodb.default.svc.cluster.local
+fullname: mongo
 
-auth:
-  enabled: true
-  rootUser: root
-  rootPassword: "root123Mudar"
-  usernames: []
-  passwords: []
-  databases: []
+image:
+  repository: mongo
+  pullPolicy: IfNotPresent
+  tag: "latest"
 
-
-resources:
-  limits: 
-    cpu: 500m
-    memory: 256Mi
-    
+resources: 
+  limits:
+    cpu: 1000m
+    memory: 1024Mi
   requests:
     cpu: 500m
     memory: 256Mi
 
-containerPorts:
-  mongodb: 27017
+service:
+  port: 27017
 
-customLivenessProbe: 
-  periodSeconds: 15
-  timeoutSeconds: 10
-  successThreshold: 1
-  failureThreshold: 5
-  initialDelaySeconds: 40
-  exec:
-    command:
-      - echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+mongoexpress:
+  enable: true
+  fullname: mongo-express
+  mongo:
+    user: root
+    password: "root123Mudar"
+    servicename: mongo-service.default.svc.cluster.local
