--- a/k8s/api-bank/values.yaml
+++ b/k8s/api-bank/values.yaml
@@ -23,7 +23,7 @@ pod:
 mongodb:
   user: root
   password: root123Mudar
-  service: mongo-mongodb.default.svc.cluster.local
+  service: mongo-service.default.svc.cluster.local
   port: 27017
   databasename: bacen
 
