--- a/k8s/kafka/confluent/charts/zookeeper/templates/deployment.yaml
+++ b/k8s/kafka/confluent/charts/zookeeper/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "zookeeper.fullname" . }}
+  name: {{ include "zookeeper.fullname" . }}-deployment
   labels:
     chart: "{{ .Release.Name }}-{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:  
