--- a/k8s/mongo/charts/ui/templates/ingress.yaml
+++ b/k8s/mongo/charts/ui/templates/ingress.yaml
@@ -1,10 +1,11 @@
+{{- if .Values.enabled -}}
 {{ if .Values.ingress.enabled }}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
-metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | trimSuffix "-" }}
-  name: {{ $fullname }}-ingress
+metadata: 
+  name: {{ include "mongo-express.fullname" . }}-ingress
   labels:
-    name: {{ $fullname }}-ingress
+    name: {{ include "mongo-express.fullname" . }}-ingress
 spec:
   ingressClassName: nginx
   rules:
@@ -15,7 +16,8 @@ spec:
         path: "/"
         backend:
           service:
-            name: {{ $fullname }}-service
+            name: {{ include "mongo-express.fullname" . }}-service
             port: 
               number: {{ .Values.service.port | default 80 | int}}
-{{ end }}            
+{{ end }} 
+{{ end }}           
