--- a/k8s/mongo/charts/ui/templates/service.yaml
+++ b/k8s/mongo/charts/ui/templates/service.yaml
@@ -1,10 +1,11 @@
+{{- if .Values.enabled -}}
 apiVersion: v1
 kind: Service
-metadata: {{ $fullname := printf "%s-%s" .Release.Name .Chart.Name | trunc 63 | trimSuffix "-" }}
-  name: {{ $fullname }}-service
+metadata: 
+  name: {{ include "mongo-express.fullname" . }}-service
 spec:
   selector:
-    app: {{ $fullname }}
+    app: {{ include "mongo-express.fullname" . }}
   ports:
   - port: {{ .Values.service.port | default 80 | int }}
     targetPort: {{ .Values.pod.port | int }} 
@@ -13,3 +14,4 @@ spec:
   {{- else }}
   type: LoadBalancer
   {{- end }}
+{{- end }}
