--- a/k8s/mongo/charts/ui/values.yaml
+++ b/k8s/mongo/charts/ui/values.yaml
@@ -1,19 +1,27 @@
-replicaCount: 1
-tag: 1.0.0-alpha.4
+enabled: true
+fullname: mongo-express
+
+image:
+  repository: mongo-express
+  tag: 1.0.0-alpha.4
+
 pod:
   resources:
     limits:
       memory: "128Mi"
       cpu: "500m"
   port: 8081
+
 service:
   type: ClusterIP
   port: 80
+
 mongo:
   user: root
   password: root123Mudar
-  service: mongo-mongodb.default.svc.cluster.local
+  servicename: mongo.default.svc.cluster.local
   port: 27017
+  
 ingress:
   enabled: true
   host: mongo-express.leandroalves.dev.br
