--- a/k8s/star.accounts.values.yaml
+++ b/k8s/star.accounts.values.yaml
@@ -20,7 +20,7 @@ pod:
 mongodb:
   user: root
   password: root123Mudar
-  service: mongo-mongodb.default.svc.cluster.local
+  service: mongo-service.default.svc.cluster.local
   port: 27017
   databasename: star.accounts
 
